force-app/main/default/objects/Fulfillment__c/Fulfillment__c.object-meta.xml
<CustomObject>
    <label>Fulfillment</label>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Fulfillment Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>