force-app/main/default/objects/Fulfillment__c/fields/ACDF_WF_Channel__c.field-meta.xml
<CustomField>
    <fullName>ACDF_WF_Channel__c</fullName>
    <formula>PrimaryRecipient__r.ACDF_WF_Channel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF WF Channel</label>
    <type>Text</type>
</CustomField>