force-app/main/default/objects/Fulfillment__c/fields/Activity_Subject_Choices__c.field-meta.xml
<CustomField>
    <fullName>Activity_Subject_Choices__c</fullName>
    <description>Hidden field, contains choices for log a call flow</description>
    <inlineHelpText>If you can see this field, please contact your administrator</inlineHelpText>
    <label>Activity Subject Choices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>