force-app/main/default/objects/Fulfillment__c/fields/Actual_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Upload_Date__c</fullName>
    <formula>Market__r.Actual_Upload_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Upload Date</label>
    <type>Date</type>
</CustomField>