force-app/main/default/objects/Fulfillment__c/fields/Ad_Prod_Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Ad_Prod_Alternate_Email__c</fullName>
    <description>Use this field to manually enter another email address that will receive product alerts</description>
    <inlineHelpText>Use this field to manually enter another email address that will receive product alerts</inlineHelpText>
    <label>Ad Prod Alternate Email</label>
    <type>Email</type>
</CustomField>