force-app/main/default/objects/Fulfillment__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <formula>PrimaryRecipient__r.ACDF_Company_Address_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address 2</label>
    <type>Text</type>
</CustomField>