force-app/main/default/objects/Fulfillment__c/fields/Alternate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact__c</fullName>
    <formula>Boom_Order__r.Alternate_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternate Contact</label>
    <type>Text</type>
</CustomField>