force-app/main/default/objects/Fulfillment__c/fields/Alternate_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Phone__c</fullName>
    <description>Boom_Order__r.Alternate_Contact_Phone__c</description>
    <formula>&quot;TBD&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Boom_Order__r.Alternate_Contact_Phone__c</inlineHelpText>
    <label>Alternate Contact Phone</label>
    <type>Text</type>
</CustomField>