force-app/main/default/objects/Fulfillment__c/fields/AM_Email__c.field-meta.xml
<CustomField>
    <fullName>AM_Email__c</fullName>
    <description>OrderNumber__r.kugo2p__Opportunity__r.FSP_Sales_Rep__r.Email</description>
    <formula>&quot;TBD&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>OrderNumber__r.kugo2p__Opportunity__r.FSP_Sales_Rep__r.Email</inlineHelpText>
    <label>AM Email</label>
    <type>Text</type>
</CustomField>