force-app/main/default/objects/Fulfillment__c/fields/AM_ID__c.field-meta.xml
<CustomField>
    <fullName>AM_ID__c</fullName>
    <formula>Boom_Order__r.Opportunity__r.FSP_Sales_Rep__r.Salesforce_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM ID</label>
    <type>Text</type>
</CustomField>