force-app/main/default/objects/Fulfillment__c/fields/AM_Phone__c.field-meta.xml
<CustomField>
    <fullName>AM_Phone__c</fullName>
    <formula>OrderNumber__r.kugo2p__Opportunity__r.FSP_Sales_Rep__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Phone</label>
    <type>Text</type>
</CustomField>