force-app/main/default/objects/Fulfillment__c/fields/Associated_With__c.field-meta.xml
<CustomField>
    <fullName>Associated_With__c</fullName>
    <formula>Market__r.Program_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated With</label>
    <type>Text</type>
</CustomField>