force-app/main/default/objects/Fulfillment__c/fields/Award_Year__c.field-meta.xml
<CustomField>
    <fullName>Award_Year__c</fullName>
    <formula>TEXT(Boom_Order_Product_Line__r.Award_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Year</label>
    <type>Text</type>
</CustomField>