force-app/main/default/objects/Fulfillment__c/fields/Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Color__c</fullName>
    <formula>TEXT(Boom_Order_Product_Line__r.Background_Color__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Background Color RETIRED</label>
    <type>Text</type>
</CustomField>