force-app/main/default/objects/Fulfillment__c/fields/Base_Product__c.field-meta.xml
<CustomField>
    <fullName>Base_Product__c</fullName>
    <formula>Boom_Order_Product_Line__r.Product__r.Base_Product__c</formula>
    <label>Base Product</label>
    <type>Text</type>
</CustomField>