force-app/main/default/objects/Fulfillment__c/fields/Boom_Order__c.field-meta.xml
<CustomField>
    <fullName>Boom_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Boom Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Fulfillments</relationshipLabel>
    <relationshipName>Fulfillments1</relationshipName>
    <type>Lookup</type>
</CustomField>