force-app/main/default/objects/Fulfillment__c/fields/Boom_Order_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Boom_Order_Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Boom Order Product Line</label>
    <referenceTo>SalesOrderProductLine__c</referenceTo>
    <relationshipLabel>Fulfillments</relationshipLabel>
    <relationshipName>Fulfillments1</relationshipName>
    <type>Lookup</type>
</CustomField>