force-app/main/default/objects/Fulfillment__c/fields/Brochure_Type__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Type__c</fullName>
    <description>TEXT(OrderProductLine__r.Brochure_Type__c)</description>
    <formula>TEXT(Boom_Order_Product_Line__r.Brochure_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brochure Type</label>
    <type>Text</type>
</CustomField>