force-app/main/default/objects/Fulfillment__c/fields/Business_Activity_Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Business_Activity_Days_Overdue__c</fullName>
    <formula>IF( Profession__c = &quot;WM&quot;, IF( Upload_Date__c &gt; Today(), 0, CASE(MOD( LastActivityDate - DATE(1985,6,24),7), 

  0 , CASE( MOD( TODAY() - LastActivityDate ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( TODAY() - LastActivityDate ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( TODAY() - LastActivityDate ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( TODAY() - LastActivityDate ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( TODAY() - LastActivityDate ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( TODAY() - LastActivityDate ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( TODAY() - LastActivityDate ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( TODAY() - LastActivityDate )/7)*5)), CASE(MOD( LastActivityDate - DATE(1985,6,24),7), 

  0 , CASE( MOD( TODAY() - LastActivityDate ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( TODAY() - LastActivityDate ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( TODAY() - LastActivityDate ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( TODAY() - LastActivityDate ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( TODAY() - LastActivityDate ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( TODAY() - LastActivityDate ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( TODAY() - LastActivityDate ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( TODAY() - LastActivityDate )/7)*5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Activity Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>