force-app/main/default/objects/Fulfillment__c/fields/Calendar_Marked__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Marked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calendar Marked</label>
    <type>Checkbox</type>
</CustomField>