force-app/main/default/objects/Fulfillment__c/fields/Callback_Date__c.field-meta.xml
<CustomField>
    <fullName>Callback_Date__c</fullName>
    <label>Callback Date</label>
    <type>DateTime</type>
</CustomField>