force-app/main/default/objects/Fulfillment__c/fields/Campaign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End_Date__c</fullName>
    <description>The date a subscription product is finished for the client. Date the LAST e-newsletter is sent, last day the digital ads ran, etc.</description>
    <inlineHelpText>The date a subscription product is finished for the client. Date the LAST e-newsletter is sent, last day the digital ads ran, etc.</inlineHelpText>
    <label>Campaign End Date</label>
    <type>Date</type>
</CustomField>