force-app/main/default/objects/Fulfillment__c/fields/Central_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Central_Contact_Phone__c</fullName>
    <formula>PrimaryRecipient__r.Central_Contact_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Central Contact Phone</label>
    <type>Text</type>
</CustomField>