force-app/main/default/objects/Fulfillment__c/fields/Client_Contact_List__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_List__c</fullName>
    <description>This is a url to the client contact list that was captured on the Collect Content SGIZMO form. The url will bring you to a download page with a csv or xls file containing the client&apos;s contacts.</description>
    <inlineHelpText>This is a url to the client contact list that was captured on the Collect Content SGIZMO form. The url will bring you to a download page with a csv or xls file containing the client&apos;s contacts.</inlineHelpText>
    <label>Client Contact List</label>
    <type>Url</type>
</CustomField>