force-app/main/default/objects/Fulfillment__c/fields/Client_Tier__c.field-meta.xml
<CustomField>
    <fullName>Client_Tier__c</fullName>
    <label>Client Tier</label>
    <length>250</length>
    <type>Text</type>
</CustomField>