force-app/main/default/objects/Fulfillment__c/fields/Complaint_Order__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Order__c</fullName>
    <formula>Boom_Order__r.Complaint_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Order</label>
    <type>Checkbox</type>
</CustomField>