force-app/main/default/objects/Fulfillment__c/fields/Contact_Block_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_Block_City__c</fullName>
    <label>Contact Block City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>