force-app/main/default/objects/Fulfillment__c/fields/Contact_Block_Phone_2_Label__c.field-meta.xml
<CustomField>
    <fullName>Contact_Block_Phone_2_Label__c</fullName>
    <label>Contact Block Phone 2 Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>