force-app/main/default/objects/Fulfillment__c/fields/Contact_Block_State__c.field-meta.xml
<CustomField>
    <fullName>Contact_Block_State__c</fullName>
    <label>Contact Block State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>