force-app/main/default/objects/Fulfillment__c/fields/Contact_List_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_List_Count__c</fullName>
    <description># of contacts assigned in EE</description>
    <inlineHelpText># of contacts assigned in EE</inlineHelpText>
    <label>Contact List Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>