force-app/main/default/objects/Fulfillment__c/fields/Contact_List_Full__c.field-meta.xml
<CustomField>
    <fullName>Contact_List_Full__c</fullName>
    <description>Postcard Contact List in EE account is &gt;= to quantity on Fulfillment</description>
    <formula>Contact_List_Count__c  &gt;=  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Postcard Contact List in EE account is &gt;= to quantity on Fulfillment</inlineHelpText>
    <label>Contact List Full</label>
    <type>Checkbox</type>
</CustomField>