force-app/main/default/objects/Fulfillment__c/fields/Contact_List_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_List_Source__c</fullName>
    <label>Contact List Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>