force-app/main/default/objects/Fulfillment__c/fields/Contact_List_Updated__c.field-meta.xml
<CustomField>
    <fullName>Contact_List_Updated__c</fullName>
    <description>Date of last contact list update</description>
    <inlineHelpText>Date of last contact list update</inlineHelpText>
    <label>Contact List Updated</label>
    <type>Date</type>
</CustomField>