force-app/main/default/objects/Fulfillment__c/fields/Content_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Content_Renewal__c</fullName>
    <description>Date we should ask for renewed content</description>
    <inlineHelpText>Content submission + 11 months. Date we should ask for renewed content for E-Newsletter</inlineHelpText>
    <label>Content Renewal</label>
    <type>Date</type>
</CustomField>