force-app/main/default/objects/Fulfillment__c/fields/Core_Publication__c.field-meta.xml
<CustomField>
    <fullName>Core_Publication__c</fullName>
    <formula>Market__r.Magazine_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Publication</label>
    <type>Text</type>
</CustomField>