force-app/main/default/objects/Fulfillment__c/fields/Correct_Product_Built__c.field-meta.xml
<CustomField>
    <fullName>Correct_Product_Built__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Perfect Order Checklist</description>
    <inlineHelpText>Has the product been built with client information OR information from an existing profile</inlineHelpText>
    <label>Correct Product Built</label>
    <type>Checkbox</type>
</CustomField>