force-app/main/default/objects/Fulfillment__c/fields/Created_Date_Lite__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Lite__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Lite</label>
    <type>Date</type>
</CustomField>