force-app/main/default/objects/Fulfillment__c/fields/Created_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Created_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks a box to prevent recurrence of a workflow</description>
    <inlineHelpText>Hidden field, if you can see this please contact tech support</inlineHelpText>
    <label>Created Email Sent</label>
    <type>Checkbox</type>
</CustomField>