force-app/main/default/objects/Fulfillment__c/fields/CSR_Appointment_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>CSR_Appointment_Completed_Date__c</fullName>
    <description>Autofilled via workflow, date that CSR appointment was completed</description>
    <label>CSR Appointment Completed Date</label>
    <type>Date</type>
</CustomField>