force-app/main/default/objects/Fulfillment__c/fields/CSR_Appointment_Completed_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>CSR_Appointment_Completed_Date_and_Time__c</fullName>
    <label>CSR Appointment Completed Date and Time</label>
    <type>DateTime</type>
</CustomField>