force-app/main/default/objects/Fulfillment__c/fields/CSR_Follow_Up_2_Date__c.field-meta.xml
<CustomField>
    <fullName>CSR_Follow_Up_2_Date__c</fullName>
    <formula>Market__r.CSR_Follow_Up_2_Deadline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Follow-Up 2 Date</label>
    <type>Date</type>
</CustomField>