force-app/main/default/objects/Fulfillment__c/fields/CSR_Sumo_Link__c.field-meta.xml
<CustomField>
    <fullName>CSR_Sumo_Link__c</fullName>
    <formula>&quot;https://fivestarprofessional-experience.force.com/s/onlinescheduler?processId=a5F6T0000030K6kUAE&amp;clientId=&quot;+Id+&quot;&amp;whoId=&quot;+ Fulfillment_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Sumo Link</label>
    <type>Text</type>
</CustomField>