force-app/main/default/objects/Fulfillment__c/fields/CTA_Message__c.field-meta.xml
<CustomField>
    <fullName>CTA_Message__c</fullName>
    <description>This field is used to capture CTA messages for products (example: ELM E-Mag CTA message)</description>
    <inlineHelpText>This field is used to capture CTA messages for products (example: ELM E-Mag CTA message)</inlineHelpText>
    <label>CTA Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>