force-app/main/default/objects/Fulfillment__c/fields/Custom_Back_Cover_Ad__c.field-meta.xml
<CustomField>
    <fullName>Custom_Back_Cover_Ad__c</fullName>
    <description>Client Supplied Artwork for Back Cover</description>
    <inlineHelpText>Client Supplied Artwork for Back Cover</inlineHelpText>
    <label>Custom Back Cover Ad</label>
    <type>Url</type>
</CustomField>