force-app/main/default/objects/Fulfillment__c/fields/Custom_Back_Cover_Inside_Ad__c.field-meta.xml
<CustomField>
    <fullName>Custom_Back_Cover_Inside_Ad__c</fullName>
    <description>Client-supplied inside back cover design</description>
    <inlineHelpText>Client-supplied inside back cover design</inlineHelpText>
    <label>Custom Back Cover (Inside) Ad</label>
    <type>Url</type>
</CustomField>