force-app/main/default/objects/Fulfillment__c/fields/Custom_Back_Cover_Updated__c.field-meta.xml
<CustomField>
    <fullName>Custom_Back_Cover_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Back Cover Updated</label>
    <type>Checkbox</type>
</CustomField>