force-app/main/default/objects/Fulfillment__c/fields/Custom_Front_Cover_Inside_Ad__c.field-meta.xml
<CustomField>
    <fullName>Custom_Front_Cover_Inside_Ad__c</fullName>
    <description>Custom Front Cover Inside Ad Link</description>
    <inlineHelpText>Custom Front Cover Inside Ad Link</inlineHelpText>
    <label>Custom Front Cover (Inside) Ad</label>
    <type>Url</type>
</CustomField>