force-app/main/default/objects/Fulfillment__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <formula>PrimaryRecipient__r.Full_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ID</label>
    <type>Text</type>
</CustomField>