force-app/main/default/objects/Fulfillment__c/fields/Date_Contact_List_EE__c.field-meta.xml
<CustomField>
    <fullName>Date_Contact_List_EE__c</fullName>
    <label>Date Contact List EE</label>
    <type>Date</type>
</CustomField>