force-app/main/default/objects/Fulfillment__c/fields/Date_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Date_Ordered__c</fullName>
    <description>Used to sort new fulfillments Line effective date of order product line

OrderProductLine__r.Line_Effective_Date__c</description>
    <formula>Boom_Order_Product_Line__r.Line_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Line effective date of order product line - can be used to find recently added products</inlineHelpText>
    <label>Date Ordered</label>
    <type>Date</type>
</CustomField>