force-app/main/default/objects/Fulfillment__c/fields/Digital_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>Digital_Profile_URL__c</fullName>
    <label>Digital Profile URL</label>
    <type>Url</type>
</CustomField>