force-app/main/default/objects/Fulfillment__c/fields/Digital_Spotlight_CAR_Date__c.field-meta.xml
<CustomField>
    <fullName>Digital_Spotlight_CAR_Date__c</fullName>
    <label>Digital Spotlight CAR Date</label>
    <type>Date</type>
</CustomField>