force-app/main/default/objects/Fulfillment__c/fields/E_reprint_link__c.field-meta.xml
<CustomField>
    <fullName>E_reprint_link__c</fullName>
    <label>E-reprint link</label>
    <type>Url</type>
</CustomField>