force-app/main/default/objects/Fulfillment__c/fields/EE_10_or_More_Contacts__c.field-meta.xml
<CustomField>
    <fullName>EE_10_or_More_Contacts__c</fullName>
    <description>This box is checked when there are 10 or more contacts in the EE contact database.</description>
    <formula>Contact_List_Count__c &gt; 9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This box is checked when there are 10 or more contacts in the EE contact database.</inlineHelpText>
    <label>EE 10 or More Contacts</label>
    <type>Checkbox</type>
</CustomField>