force-app/main/default/objects/Fulfillment__c/fields/EE_Photo_Received__c.field-meta.xml
<CustomField>
    <fullName>EE_Photo_Received__c</fullName>
    <formula>(NOT(ISBLANK(Contact_Block_Photo__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This box is checked when a photo url appears in the Contact Block__c field on the fulfillment.</inlineHelpText>
    <label>EE Photo Received</label>
    <type>Checkbox</type>
</CustomField>