force-app/main/default/objects/Fulfillment__c/fields/EL_Boxed_Copies__c.field-meta.xml
<CustomField>
    <fullName>EL_Boxed_Copies__c</fullName>
    <description>Additional Boxed Copies</description>
    <inlineHelpText>Additional Boxed Copies</inlineHelpText>
    <label>EL Boxed Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>