force-app/main/default/objects/Fulfillment__c/fields/ELM_Onboard_Deadline__c.field-meta.xml
<CustomField>
    <fullName>ELM_Onboard_Deadline__c</fullName>
    <description>This field is set with the last day to submit changes for the client&apos;s first issue.</description>
    <inlineHelpText>This field is set with the last day to submit changes for the client&apos;s first issue.</inlineHelpText>
    <label>ELM Onboard Deadline</label>
    <type>Date</type>
</CustomField>