force-app/main/default/objects/Fulfillment__c/fields/ELM_Onboarded__c.field-meta.xml
<CustomField>
    <fullName>ELM_Onboarded__c</fullName>
    <formula>AND(NOT(
ISBLANK(Contact_Block_Name__c)||
ISBLANK(Contact_Block_Photo__c)
),

Contact_List_Count__c &gt; 9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ELM Onboarded</label>
    <type>Checkbox</type>
</CustomField>