force-app/main/default/objects/Fulfillment__c/fields/Email_Announcement_Service__c.field-meta.xml
<CustomField>
    <fullName>Email_Announcement_Service__c</fullName>
    <description>This field captures whether a client has chosen to allow us to send emails on their behalf. Yes value means the client has or will provide an email list. No value means the client has opted out of the service</description>
    <inlineHelpText>This field captures whether a client has chosen to allow us to send emails on their behalf. Yes value means the client has or will provide an email list. No value means the client has opted out of the service</inlineHelpText>
    <label>Email Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, has list</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes, need list</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>