force-app/main/default/objects/Fulfillment__c/fields/First_Testimonial__c.field-meta.xml
<CustomField>
    <fullName>First_Testimonial__c</fullName>
    <description>Date of first Testimonial</description>
    <inlineHelpText>Date of first Testimonial</inlineHelpText>
    <label>First Testimonial</label>
    <summarizedField>Testimonial__c.Publish_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Testimonial__c.Status__c</field>
        <operation>equals</operation>
        <value>Published</value>
    </summaryFilterItems>
    <summaryForeignKey>Testimonial__c.Fulfillment__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>