force-app/main/default/objects/Fulfillment__c/fields/Fortune_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Fortune_Upload_Date__c</fullName>
    <formula>Market__r.Fortune_Upload_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fortune Upload Date</label>
    <type>Date</type>
</CustomField>