force-app/main/default/objects/Fulfillment__c/fields/Front_Cover_Ad_Template__c.field-meta.xml
<CustomField>
    <fullName>Front_Cover_Ad_Template__c</fullName>
    <description>Front cover choice for ELM</description>
    <inlineHelpText>Front cover choice for ELM</inlineHelpText>
    <label>Front Cover Ad Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>