force-app/main/default/objects/Fulfillment__c/fields/Front_Cover_Inside_Ad_Template__c.field-meta.xml
<CustomField>
    <fullName>Front_Cover_Inside_Ad_Template__c</fullName>
    <description>Front Cover Inside Choice</description>
    <inlineHelpText>Front Cover Inside Choice for ELM</inlineHelpText>
    <label>Front Cover (Inside) Ad Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>