force-app/main/default/objects/Fulfillment__c/fields/FSP_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>FSP_Order_ID__c</fullName>
    <label>FSP Order ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>