force-app/main/default/objects/Fulfillment__c/fields/Fulfillment_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Owner_ID__c</fullName>
    <formula>Fulfillment_Owner__r.Salesforce_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Owner ID</label>
    <type>Text</type>
</CustomField>