force-app/main/default/objects/Fulfillment__c/fields/Fulfillment_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Owner_Phone__c</fullName>
    <formula>Fulfillment_Owner__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Owner Phone</label>
    <type>Text</type>
</CustomField>