force-app/main/default/objects/Fulfillment__c/fields/Fulfillment_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Person_ID__c</fullName>
    <inlineHelpText>Thi will be populated by a lightning process and used to link to the Fulfillment user</inlineHelpText>
    <label>Fulfillment Person ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>