force-app/main/default/objects/Fulfillment__c/fields/Grace_Period_Sale__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Sale__c</fullName>
    <formula>Boom_Order__r.Grace_Period_Sale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grace Period Sale</label>
    <type>Checkbox</type>
</CustomField>