force-app/main/default/objects/Fulfillment__c/fields/Graphics_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RETIRED Graphics Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fulfillments1</relationshipName>
    <type>Lookup</type>
</CustomField>